Fixed xbuild was replaced by standard cargo build With the unstable feature added into .cargo/config i was able to build everything and install the tty image via qemu i need to try something else and learn about interrupts though because my cpu was melting!

--- a/kern/.cargo/config
+++ b/kern/.cargo/config
@@ -13,3 +13,6 @@ rustflags = [
     "-C", "link-arg=-L.cargo",
     "-C", "link-arg=-lsd",
 ]
+
+[unstable]
+build-std = ["core", "compiler_builtins"]
