shell update must test boot loader

--- a/boot/Cargo.toml
+++ b/boot/Cargo.toml
@@ -17,3 +17,8 @@ memcpy = true
 pi = { path = "../lib/pi/" }
 shim = { path = "../lib/shim", features = ["no_std"] }
 xmodem = { path = "../lib/xmodem", features = ["no_std"] }
+
+[[bin]]
+name = "boot"
+test = false
+bench = false
