--- a/boot/.cargo/config
+++ b/boot/.cargo/config
@@ -8,3 +8,7 @@ rustflags = [
     "-C", "link-arg=--script=.cargo/layout.ld",
     "-C", "link-arg=--no-dynamic-linker",
 ]
+
+[unstable]
+build-std = ["core", "compiler_builtins"]
+build-std-features = ["compiler-builtins-mem"]
