--- a/lib/pi/Cargo.toml
+++ b/lib/pi/Cargo.toml
@@ -1,6 +1,9 @@
+cargo-features = ["edition2021"]
+
 [package]
 name = "pi"
 version = "0.1.0"
+edition = "2021"
 authors = [
     "Sergio Benitez <sb@sergio.bz>",
     "Taesoo Kim <taesoo@gatech.edu>",
@@ -8,7 +11,7 @@ authors = [
     "Sujin Park <sujin.park@gatech.edu>",
     "Mansour Alharthi <mansourah@gatech.edu>"
 ]
-edition = "2018"
+
 
 [dependencies]
 volatile = { path = "../volatile" }
