--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,11 @@ target/
 build/
 TAGS
 .dep
+*.lock
+
+
+# Remove Cargo.lock from gitignore if creating an executable, leave it for libraries
+# More information here http://doc.crates.io/guide.html#cargotoml-vs-cargolock
+lib/**/Cargo.lock
+
+ext/fat32-imgs/*.fat32.img
