--- a/lib/pi/Cargo.toml
+++ b/lib/pi/Cargo.toml
@@ -1,5 +1,3 @@
-cargo-features = ["edition2021"]
-
 [package]
 name = "pi"
 version = "0.1.0"
@@ -16,3 +14,6 @@ authors = [
 [dependencies]
 volatile = { path = "../volatile" }
 shim = { path = "../shim", features = ["no_std"] }
+
+[dev-dependencies]
+shim = { path = "../shim" }
